--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First webpage</title>
+    <title>My Favorite Things</title>
 </head>
 <body>
-    Hello, World!
-    Welcome to my first webpage
+    
 </body>
 </html>
