add favorite things and best friends

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -6,6 +6,19 @@
     <title>My Favorite Things</title>
 </head>
 <body>
-    
+    <h1>My Favorite Things</h1>
+    <h2>My Best Friend</h2>
+    <ul>
+        <li>Cherissa</li>
+        <li>Nicole</li>
+        <li>Nadia</li>
+    </ul>
+    <h2>Favorite Foods</h2>
+    <ol>
+        <li>Isombe</li>
+        <li>French Fries</li>
+        <li>Bread</li>
+    </ol>
+    <p>Some other favorite include movies, music</p>
 </body>
 </html>
