Add inline element in my-favorite-things.html file

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -7,18 +7,24 @@
 </head>
 <body>
     <h1>My Favorite Things</h1>
-    <h2>My Best Friend</h2>
+    <h2><em>My Best Friend</em></h2>
     <ul>
         <li>Cherissa</li>
         <li>Nicole</li>
         <li>Nadia</li>
     </ul>
-    <h2>Favorite Foods</h2>
+    <h2><em>Favorite Foods</em></h2>
     <ol>
         <li>Isombe</li>
         <li>French Fries</li>
         <li>Bread</li>
     </ol>
     <p>Some other favorite include movies, music</p>
+    <p>Favorite <strong>Website</strong></p>
+    <ul>
+        <li><a href="https://www.tutorialspoint.com">Tutorials Point</a></li>
+        <li><a href="https://www.javatpoint.com">Javatpoint</a></li> 
+        <li><a href="http://www.w3school.com">W3School</a></li>
+    </ul>
 </body>
 </html>
