--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First webpage</title>
+    <title>My First webpage!</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1>My First Webpage</h1>
@@ -18,7 +19,7 @@
         <li>And a lot more!</li>
     </ul>
     <p>Check out <a href="http://moringaschool.com/">Moringa School</a>.It's a great place to learn web development skills!</p>
-    <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
+    <p>Here is a link to my <a href="my-favorite-things.html" target="_blank">favorite things</a>.</p>
     <img src="images/elephant.jpg" alt="A photo of an elephant" />
 </body>
 </html>
